--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.456.0",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
